--- a/app/views/public/events/result.html.erb
+++ b/app/views/public/events/result.html.erb
@@ -20,7 +20,7 @@
                     <% end %>
                   </div>
                   <div class="col mt-2">
-                    <div class="ml-1 mt-1"><%= link_to event.name, event_path(event.id) %></div>
+                    <div class="ml-1 mt-1"><h4><%= link_to event.name, event_path(event.id) %></h4></div>
                     <% event.event_categories.each do |ec| %>
                       <span class="badge badge-primary mr-2"><%= ec.category.name %></span>
                     <% end %>
