--- a/app/views/public/events/edit.html.erb
+++ b/app/views/public/events/edit.html.erb
@@ -54,7 +54,7 @@
        最小人数
       </div>
       <div class="col">
-       <%= f.select :minimum_number, (1..20).to_a, { include_blank: '選択してください' } %>人
+       <%= f.select :minimum_number, (1..20).to_a, { include_blank: '※任意' } %>人
       </div>
       <div class="col">
       </div>
@@ -62,7 +62,7 @@
        人数指定
       </div>
       <div class="col">
-       <%= f.select :fixed_number, (1..20).to_a, { include_blank: '選択してください' } %>人
+       <%= f.select :fixed_number, (1..20).to_a, { include_blank: '※任意' } %>人
       </div>
       <div class="col">
       </div>
