--- a/app/views/public/events/index.html.erb
+++ b/app/views/public/events/index.html.erb
@@ -46,7 +46,7 @@
                 </div>
                 <div class="col mt-2">
                   <div class="ml-1 mt-1">
-                    <%= link_to event.name, event_path(event.id) %>
+                    <h4><%= link_to event.name, event_path(event.id) %></h4>
                   </div>
                   <% event.event_categories.each do |ec| %>
                     <span class="badge badge-primary mr-2"><%= ec.category.name %></span>
