--- a/app/views/public/events/new.html.erb
+++ b/app/views/public/events/new.html.erb
@@ -45,18 +45,18 @@
                 </div>
               </div>
               <div class="form-group col-md-6">
-                <%= f.label :minimum_number, "最小人数 ※任意" %>
+                <%= f.label :minimum_number, "最小人数" %>
                 <div class="input-group">
-                  <%= f.select :minimum_number, (1..20).to_a, { include_blank: '選択してください' }, class: "form-control" %>
+                  <%= f.select :minimum_number, (1..20).to_a, { include_blank: '※任意' }, class: "form-control" %>
                   <div class="input-group-append">
                     <span class="input-group-text">人</span>
                   </div>
                 </div>
               </div>
               <div class="form-group col-md-6">
-                <%= f.label :fixed_number, "人数指定 ※任意" %>
+                <%= f.label :fixed_number, "人数指定" %>
                 <div class="input-group">
-                  <%= f.select :fixed_number, (1..20).to_a, { include_blank: '選択してください' }, class: "form-control" %>
+                  <%= f.select :fixed_number, (1..20).to_a, { include_blank: '※任意' }, class: "form-control" %>
                   <div class="input-group-append">
                     <span class="input-group-text">人</span>
                   </div>
