--- a/app/views/public/reservations/new.html.erb
+++ b/app/views/public/reservations/new.html.erb
@@ -1,6 +1,6 @@
 <div class="container mt-5">
   <div class="text-center">
-    <h4>イベント詳細</h4>
+    <h4>イベント予約</h4>
   </div>
 
   <div class="row justify-content-center mt-4">
@@ -16,7 +16,7 @@
           </div>
         </div>
         <div class="col-md-8">
-          <div class="mb-2"><%= @event.name %></div>
+          <div class="mb-2"><h2><%= @event.name %></h2></div>
           <div class="event-categories">
             <% @event.event_categories.each do |ec| %>
               <span class="badge badge-primary mr-2"><%= ec.category.name %></span>
@@ -25,6 +25,11 @@
           <div class="mt-2">開催日時：<%= @event.date %></div>
           <div class="mt-2">開催地：<%= Prefecture.names.invert[@event.prefecture_id] %> <%= @event.place %></div>
           <div class="mt-2">募集人数：<%= @event.number %>人</div>
+          <% if @event.fixed_number.present? %>
+              <div class="mt-2"><%= @event.fixed_number %>人で予約してください。</div class="mt-2">
+            <% elsif @event.minimum_number.present? %>
+              <div class="mt-2">・<%= @event.minimum_number %>人以上で予約してください。</div class="mt-2">
+            <% end %>
           <div class="mt-2">参加料金：<%= @event.fee %>円</div>
           <div class="mt-2">お支払い方法：<%= @event.how_to_pay_i18n %></div>
         </div>
@@ -36,15 +41,16 @@
       </div>
 
       <div class="mt-4">
+        <h4>予約者名：<%= current_user.last_name %> <%= current_user.first_name %>様</h4>
         <% if @event.available_numbers > 0 %>
-          <div class="alert alert-success">
-            予約可能な人数: <%= @event.available_numbers %>
+          <div class="alert alert-success text-center" style="max-width: 300px;">
+            現在<%= @event.available_numbers %>人予約可能です。
           </div>
           <%= form_with model: @reservation, url: event_reservations_path, method: :post do |f| %>
             <div class="form-group">
               <%= f.label :reserved_number, "予約人数" %>
-              <div class="input-group">
-                <%= f.number_field :reserved_number, min: 1, value: 1, class: "form-control" %>
+              <div class="input-group" style="max-width: 300px;">
+                <%= f.number_field :reserved_number,  class: "form-control" %>
                 <div class="input-group-append">
                   <span class="input-group-text">人</span>
                 </div>
@@ -52,7 +58,10 @@
             </div>
             <%= f.hidden_field :event_id, value: @event.id %>
             <%= f.hidden_field :date, value: @event.date %>
-            <%= f.submit "予約する", class: "btn btn-success btn-block" %>
+            <%= f.submit "予約する", class: "btn btn-success" %>
+            <div class="text-right">
+              <%= link_to "戻る", event_path(@event.id), class: "btn btn-secondary" %>
+            </div>
           <% end %>
         <% else %>
           <div class="alert alert-danger">
@@ -60,10 +69,7 @@
           </div>
         <% end %>
       </div>
-
-      <div class="mt-4">
-        <%= link_to "戻る", events_path, class: "btn btn-secondary btn-block" %>
-      </div>
     </div>
   </div>
+
 </div>
