--- a/app/views/public/users/favorite.html.erb
+++ b/app/views/public/users/favorite.html.erb
@@ -17,7 +17,7 @@
                       <% end %>
                     </div>
                     <div class="col mt-2">
-                      <div class="ml-1 mt-1"><%= link_to favorite.event.name, event_path(favorite.event.id) %></div>
+                      <div class="ml-1 mt-1"><h4><%= link_to favorite.event.name, event_path(favorite.event.id) %></h4></div>
                         <% favorite.event.categories.each do |category| %>
                           <span class="badge badge-primary mr-2"><%= category.name %></span>
                         <% end %>
