--- a/app/views/public/users/show.html.erb
+++ b/app/views/public/users/show.html.erb
@@ -8,8 +8,10 @@
 
         <% if @notifications.present? %>
 
+        <%= link_to "招待が来ています。", user_notification_path, class: "btn btn-success btn-sm", remote: true %>
+
           <div id="mask" class="hidden"></div>
-          <div id="modal" class="hidden"><%= link_to "招待が来ています。", user_notification_path, class: "btn btn-success btn-sm", remote: true %></div>
+          <div id="modal" class="hidden"></div>
 
         <% end %>
 
