--- a/app/views/public/events/index.html.erb
+++ b/app/views/public/events/index.html.erb
@@ -6,6 +6,7 @@
       <div class="container border border-dark">
        <div class="text-center border-bottom">検索</div>
         <div class="container">
+        <!--検索-->
           <%= form_with url: event_result_path(@events), method: :get, class: "form-inline justify-content-between" do |f| %>
             <div class="mt-2 mb-2">
               <%= f.text_field :keyword, placeholder: "キーワードを入力" %>
@@ -36,6 +37,7 @@
             <div class="col-md-12 mt-2 border">
               <div class="row">
                 <div class="col m-2">
+                <!--画像-->
                   <%= link_to event_path(event.id) do %>
                     <% if event.image.attached? %>
                       <%= image_tag event.image, class: "img-fluid" %>
@@ -45,6 +47,7 @@
                   <% end %>
                 </div>
                 <div class="col mt-2">
+                  <!--イベント情報-->
                   <div class="ml-1 mt-1">
                     <h4><%= link_to event.name, event_path(event.id) %></h4>
                   </div>
