--- a/app/views/public/reservations/edit.html.erb
+++ b/app/views/public/reservations/edit.html.erb
@@ -9,43 +9,44 @@
     </div>
 　<% end %>
 
-      <div class="mt-4">
+      <div class="mt-4 text-center">
         <% if @event.fixed_number.present? %>
-          <div>
-            <%= @event.fixed_number %>人で予約してください。
-          </div>
+          <h4>
+            ※<%= @event.fixed_number %>人で予約してください。
+          </h4>
         <% elsif @event.minimum_number.present? %>
-          <div>
-            <%= @event.minimum_number %>人以上で予約してください。
-          </div>
+          <h4>
+            ※<%= @event.minimum_number %>人以上で予約してください。
+          </h4>
         <% end %>
         <% if @event.available_numbers > 0 %>
-          <div class="alert alert-success">
-            予約可能な人数: <%= @event.available_numbers %>
+          <div class="alert alert-success mx-auto" style = "width: 300px;">
+            現在<%= @event.available_numbers %>人予約可能です。
           </div>
           <%= form_with model: @reservation, url: event_reservation_path, method: :patch do |f| %>
             <div class="form-group">
-              <%= f.label :reserved_number, "予約人数" %>
-              <div class="input-group">
-                <%= f.number_field :reserved_number, class: "form-control" %>
-                <div class="input-group-append">
-                  <span class="input-group-text">人</span>
+              <div class="mx-auto">
+                <%= f.label :reserved_number, "予約人数" %>
+                <div class="input-group mx-auto" style="width: 200px;">
+                  <%= f.number_field :reserved_number, class: "form-control" %>
+                  <div class="input-group-append">
+                    <span class="input-group-text">人</span>
+                  </div>
                 </div>
               </div>
             </div>
             <%= f.hidden_field :event_id, value: @event.id %>
             <%= f.hidden_field :date, value: @event.date %>
-            <%= f.submit "予約する", class: "btn btn-success" %>
+            <div class="text-center m-2">
+              <%= f.submit "予約する", class: "btn btn-success mr-4" %>
+              <%= link_to "戻る", event_reservation_path, class: "btn btn-secondary" %>
+            </div>
           <% end %>
         <% else %>
           <div class="alert alert-danger">
             満員のため受付は終了しました。たくさんのご応募ありがとうございました。
           </div>
         <% end %>
-      </div>
-
-      <div class="mt-4">
-        <%= link_to "戻る", event_reservation_path, class: "btn btn-secondary btn-block" %>
       </div>
 
 </div>
