--- a/app/views/public/reservations/show.html.erb
+++ b/app/views/public/reservations/show.html.erb
@@ -60,7 +60,7 @@
             <p>募集人数：<%= @event.number %>人</p>
             <p><%= @reservation.reserved_number %>人で予約しています。</p>
             <% if @reservation.reserved_number >= 2 %>
-              <p>代表者名：<%= @reservation.user.last_name %> <%= @reservation.user.first_name %> 様</p>
+              <p><h4>代表者名：<%= @reservation.user.last_name %> <%= @reservation.user.first_name %> 様</h4></p>
             <% else %>
               <p>予約者名：<%= @reservation.user.last_name %> <%= @reservation.user.first_name %> 様</p>
             <% end %>
