--- a/app/views/public/users/_notification.html.erb
+++ b/app/views/public/users/_notification.html.erb
@@ -2,12 +2,12 @@
   <div class="mt-5 ml-3 text-center"><h4>イベントに参加してみませんか？</h4></div>
 
     <div class="mt-4">
+    <!--招待通知表示-->
       <% notifications.each do |notification| %>
         <% if notification.event.user_id != current_user.id && notification.event.category_ids == current_user.category_ids && notification.event.date >= Date.today %>
-          <div class="col-md-8 mx-auto">
+          <div class="mx-auto">
             <div class="container mt-4">
-              <div class="row">
-                <div class="col-md-12 mt-2 border">
+                <div class="mt-2 border">
                   <div class="row">
                     <div class="col m-2">
                       <% if notification.event.image.attached? %>
@@ -17,7 +17,7 @@
                       <% end %>
                     </div>
                     <div class="col mt-2">
-                      <div class="ml-1 mt-1"><%= link_to notification.event.name, event_path(notification.event.id) %></div>
+                      <div class="ml-1 mt-1"><h4><%= link_to notification.event.name, event_path(notification.event.id) %></h4></div>
                         <% notification.event.categories.each do |category| %>
                           <span class="badge badge-primary mr-2"><%= category.name %></span>
                         <% end %>
@@ -39,7 +39,6 @@
                     </div>
                   </div>
                 </div>
-              </div>
             </div>
           </div>
         <% end %>
