--- a/app/views/public/users/show.html.erb
+++ b/app/views/public/users/show.html.erb
@@ -9,11 +9,9 @@
         <% if @notifications.present? %>
         <!--通知-->
 
-          <%= link_to "招待が届いています", user_notification_path,class: "btn btn-warning", remote: true %>
-
-          <div id="mask" class="hidden"></div>
-          <div id="modal" class="hidden overlay modal-content"></div>
-
+              <%= link_to "招待が届いています", user_notification_path,class: "btn btn-warning btn-sm", remote: true %>
+            <div id="mask" class="hidden"></div>
+            <div id="modal" class="hidden overlay modal-content"></div>
         <% end %>
 
         <div class="card-body">
