--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,7 @@
     <%= csp_meta_tag %>
 
     <script src="https://kit.fontawesome.com/ac5b2f3156.js" crossorigin="anonymous"></script>
-    <%= stylesheet_pack_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+    <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
@@ -103,7 +103,7 @@
 
     <body>
       <% flash.each do |message_type, message| %>
-        <div class="mt-5 ml-4 alert alert-info flash-message <%= message_type %>" style="max-width: 300px;"><%= message %></div>
+        <div class="flash-message <%= message_type %>"><%= message %></div>
       <% end %>
       <%= yield %>
     </body>
