--- a/app/views/public/users/_notification.html.erb
+++ b/app/views/public/users/_notification.html.erb
@@ -4,43 +4,45 @@
     <div class="mt-4">
     <!--招待通知表示-->
       <% notifications.each do |notification| %>
-        <% if notification.event.user_id != current_user.id && notification.event.category_ids == current_user.category_ids && notification.event.date >= Date.today %>
-          <div class="mx-auto">
-            <div class="container mt-4">
-                <div class="mt-2 border">
-                  <div class="row">
-                    <div class="col m-2">
-                      <% if notification.event.image.attached? %>
-                        <%= image_tag notification.event.image, class: "img-fluid" %>
-                      <% else %>
-                        <%= image_tag 'no_image', class: "img-fluid" %>
-                      <% end %>
-                    </div>
-                    <div class="col mt-2">
-                      <div class="ml-1 mt-1"><h4><%= link_to notification.event.name, event_path(notification.event.id) %></h4></div>
-                        <% notification.event.categories.each do |category| %>
-                          <span class="badge badge-primary mr-2"><%= category.name %></span>
+        <% if notification.read == false %>
+          <% if notification.event.user_id != current_user.id && notification.event.category_ids == current_user.category_ids && notification.event.date >= Date.today %>
+            <div class="mx-auto">
+              <div class="container mt-4">
+                  <div class="mt-2 border">
+                    <div class="row">
+                      <div class="col m-2">
+                        <% if notification.event.image.attached? %>
+                          <%= image_tag notification.event.image, class: "img-fluid" %>
+                        <% else %>
+                          <%= image_tag 'no_image', class: "img-fluid" %>
                         <% end %>
-                      <div class="ml-1 mt-1">開催日時：<%= notification.event.date.strftime("%Y/%m/%d") %> <%= notification.event.time.strftime("%H:%M") %></div>
-                      <div class="ml-1 mt-1">募集人数：<%= notification.event.number %>人</div>
-                      <% if notification.event.fixed_number.present? %>
-                        <div class="ml-1 mt-1">・<%= notification.event.fixed_number %>人で予約してください。</div>
-                      <% elsif notification.event.minimum_number.present? %>
-                        <div class="ml-1 mt-1">・<%= notification.event.minimum_number %>人以上で予約してください。</div>
-                      <% end %>
-                      <div class="ml-1 mt-1">開催地：<%= Prefecture.names.invert[notification.event.prefecture_id] %></div>
-                      <div class="ml-1 mt-1"><イベント概要><br>
-                                              <% if notification.event.outline.length > 40 %>
-                                                <%= notification.event.outline[0, 40] + "..." %>
-                                              <% else %>
-                                                <%= notification.event.outline %>
-                                              <% end %>
+                      </div>
+                      <div class="col mt-2">
+                        <div class="ml-1 mt-1"><h4><%= link_to notification.event.name, event_path(notification.event.id), class: "change_read-link" %></h4></div>
+                          <% notification.event.categories.each do |category| %>
+                            <span class="badge badge-primary mr-2"><%= category.name %></span>
+                          <% end %>
+                        <div class="ml-1 mt-1">開催日時：<%= notification.event.date.strftime("%Y/%m/%d") %> <%= notification.event.time.strftime("%H:%M") %></div>
+                        <div class="ml-1 mt-1">募集人数：<%= notification.event.number %>人</div>
+                        <% if notification.event.fixed_number.present? %>
+                          <div class="ml-1 mt-1">・<%= notification.event.fixed_number %>人で予約してください。</div>
+                        <% elsif notification.event.minimum_number.present? %>
+                          <div class="ml-1 mt-1">・<%= notification.event.minimum_number %>人以上で予約してください。</div>
+                        <% end %>
+                        <div class="ml-1 mt-1">開催地：<%= Prefecture.names.invert[notification.event.prefecture_id] %></div>
+                        <div class="ml-1 mt-1"><イベント概要><br>
+                                                <% if notification.event.outline.length > 40 %>
+                                                  <%= notification.event.outline[0, 40] + "..." %>
+                                                <% else %>
+                                                  <%= notification.event.outline %>
+                                                <% end %>
+                        </div>
                       </div>
                     </div>
                   </div>
-                </div>
+              </div>
             </div>
-          </div>
+          <% end %>
         <% end %>
       <% end %>
     </div>
