newレイアウト

--- a/app/views/public/events/index.html.erb
+++ b/app/views/public/events/index.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
- <div class="mt-4 mb-3 text-center"><h4>イベント一覧</h4></div>
+ <div class="mt-4 mb-3 text-center"><h4>イベント一覧</h4>※新着順</div>
 
   <div class="row">
     <div class="col-md-4 mt-5">
