--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -46,13 +46,8 @@
                   <% end %>
                 </li>
                 <li class="nav-item">
-                  <%= link_to user_reserved_path, class: "nav-link" do %>
-                    参加予定のイベント
-                  <% end %>
-                </li>
-                <li class="nav-item">
-                  <%= link_to user_favorite_path, class: "nav-link" do %>
-                    お気に入りイベント
+                  <%= link_to events_path, class: "nav-link" do %>
+                    イベント一覧
                   <% end %>
                 </li>
                 <li class="nav-item">
@@ -112,7 +107,7 @@
     <footer>
       <div class="mt-5 p-3 bg-primary bg-gradient">
         <div class="border-dark border-dark">
-          <!-- フッターコンテンツを追加 -->
+           <!--フッターコンテンツを追加 -->
           <div class="container text-center text-white">
             <p>&copy; 2023 SportsMeet</p>
           </div>
