--- a/app/views/public/events/edit.html.erb
+++ b/app/views/public/events/edit.html.erb
@@ -42,29 +42,23 @@
      </div>
 
      <div class="row mt-2">
-      <div class="col">
+      <div class="col-sm-4">
        募集人数
       </div>
-      <div class="col">
+      <div class="col-sm-8">
        <%= f.select :number, (1..50).to_a %>人
       </div>
-      <div class="col">
-      </div>
-      <div class="col">
+      <div class="col-sm-4 mt-2">
        最小人数
       </div>
-      <div class="col">
+      <div class="col-sm-8 mt-2">
        <%= f.select :minimum_number, (1..20).to_a, { include_blank: '※任意' } %>人
       </div>
-      <div class="col">
-      </div>
-      <div class="col">
+      <div class="col-sm-4 mt-2">
        人数指定
       </div>
-      <div class="col">
+      <div class="col-sm-8 mt-2">
        <%= f.select :fixed_number, (1..20).to_a, { include_blank: '※任意' } %>人
-      </div>
-      <div class="col">
       </div>
      </div>
 
@@ -85,7 +79,7 @@
        都道府県
       </div>
       <div class="col">
-       <%= f.select :prefecture_id, Prefecture.names %>
+       <%= f.select :prefecture_id, Prefecture.names.except("--") %>
       </div>
       <div class="col">
       </div>
