--- a/app/views/public/users/edit.html.erb
+++ b/app/views/public/users/edit.html.erb
@@ -127,7 +127,8 @@
      </div>
 
      <div class="mt-3 text-center">
-      <%= f.submit "登録する", class: "w-25 btn btn-success" %>
+      <%= f.submit "編集する", class: "btn btn-success btn-sm mr-5" %>
+      <%= link_to "退会する", user_unsubscribe_path, class: "btn btn-danger btn-sm ml-5" %>
      </div>
     </div>
   <% end %>
