--- a/app/views/public/events/show.html.erb
+++ b/app/views/public/events/show.html.erb
@@ -81,7 +81,7 @@
         <% if user_signed_in? %>
           <% reservation = current_user.reservations.find_by(event_id: @event.id) %>
           <% if reservation %>
-              <%= link_to "詳細", event_reservation_path(@event.id, @user_reserved), class: "btn btn-success" %>
+              <%= link_to "詳細", event_reservation_path(@user_reserved, @event.id), class: "btn btn-success" %>
           <% else %>
             <% if @event.user_id == current_user.id %>
               <%= link_to "編集", edit_event_path(@event.id), class: "btn btn-success" %>
