--- a/app/views/public/events/show.html.erb
+++ b/app/views/public/events/show.html.erb
@@ -79,9 +79,8 @@
       <div class="text-center mt-4">
         <!--ログインしているか-->
         <% if user_signed_in? %>
-          <% reservation = current_user.reservations.find_by(event_id: @event.id) %>
-          <% if reservation %>
-              <%= link_to "詳細", event_reservation_path(@user_reserved, @event.id), class: "btn btn-success" %>
+          <% if @reservation.present? %>
+              <%= link_to "詳細", event_reservation_path(current_user.id, @event.id), class: "btn btn-success" %>
           <% else %>
             <% if @event.user_id == current_user.id %>
               <%= link_to "編集", edit_event_path(@event.id), class: "btn btn-success" %>
