--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,7 +16,7 @@
       <nav class="navbar navbar-expand-lg navbar-dark bg-primary bg-gradient">
         <div class="container">
           <% if user_signed_in? %>
-            <%= link_to events_path, class: "navbar-brand" do %>
+            <%= link_to public_about_path, class: "navbar-brand" do %>
               <i class="fa-solid fa-person-running mr-2"></i>
               SportsMeet
             <% end %>
