--- a/app/views/public/events/edit.html.erb
+++ b/app/views/public/events/edit.html.erb
@@ -98,7 +98,7 @@
 
      <div class="row mt-2">
       <div class="col">
-       参加費
+       参加費　※半角
       </div>
       <div class="col">
        <%= f.text_field :fee %>円
