--- a/app/views/public/events/new.html.erb
+++ b/app/views/public/events/new.html.erb
@@ -79,7 +79,7 @@
 
             <div class="form-row">
               <div class="form-group col-md-6">
-                <%= f.label :fee, "参加費" %>
+                <%= f.label :fee, "参加費 ※半角" %>
                 <div class="input-group">
                   <%= f.text_field :fee, class: "form-control", placeholder: "必須" %>
                   <div class="input-group-append">
