--- a/app/views/public/homes/home.html.erb
+++ b/app/views/public/homes/home.html.erb
@@ -15,6 +15,7 @@
                     <%= link_to "新規登録の方はこちら", new_user_registration_path, class: "btn btn-success btn-lg btn-block" %>
                 </div>
             </div>
+            <div class="mt-3"><h6>※このサイトのイベントは全て架空のものです。<br>実際にイベントは存在しません。<br>ご注意ください。</h6></div>
         </div>
     </div>
 </div>
