--- a/app/views/admin/categories/new.html.erb
+++ b/app/views/admin/categories/new.html.erb
@@ -12,7 +12,7 @@
       </div>
 
       <div class="mt-3 text-center">
-        <%= f.submit "編集", class: "btn btn-success" %>
+        <%= f.submit "登録", class: "btn btn-success" %>
       </div>
     </div>
   <% end %>
