--- a/app/views/admin/events/index.html.erb
+++ b/app/views/admin/events/index.html.erb
@@ -18,7 +18,7 @@
             </div>
             <div class="mb-2">
               <%= f.collection_check_boxes :category_ids, Category.all, :id, :name do |b| %>
-                 <%= b.check_box + b.text %>
+                 <%= b.check_box + b.text %><br>
               <% end %>
             </div>
             <div class="mb-2">
@@ -31,46 +31,95 @@
 
     <div class="col-md-8">
       <div class="container mt-4">
-        <div class="row">
-          <% @events.each do |event| %>
-            <div class="col-md-12 mt-2 border">
-              <div class="row">
-                <div class="col m-2">
-                  <%= link_to event_path(event.id) do %>
-                    <% if event.image.attached? %>
-                      <%= image_tag event.image, class: "img-fluid" %>
-                    <% else %>
-                      <%= image_tag 'no_image', class: "img-fluid" %>
+        <% @events.each do |event| %>
+          <% if event.date >= Date.today %>
+            <div class="row">
+              <div class="col-md-12 mt-2 border">
+                <div class="row">
+                  <div class="col m-2">
+                  <!--画像-->
+                    <%= link_to admin_event_path(event.id) do %>
+                      <% if event.image.attached? %>
+                        <%= image_tag event.image, class: "img-fluid" %>
+                      <% else %>
+                        <%= image_tag 'no_image', class: "img-fluid" %>
+                      <% end %>
                     <% end %>
-                  <% end %>
-                </div>
-                <div class="col mt-2">
-                  <div class="ml-1 mt-1">
-                    <%= link_to event.name, admin_event_path(event.id) %>
                   </div>
-                  <% event.event_categories.each do |ec| %>
-                    <span class="badge badge-primary mr-2"><%= ec.category.name %></span>
-                  <% end %>
-                  <div class="ml-1 mt-1">開催日時：<%= event.date.strftime("%Y/%m/%d") %> <%= event.time.strftime("%H:%M") %></div>
-                  <div class="ml-1 mt-1">募集人数：<%= event.number %>人</div>
-                  <% if event.minimum_number.present? %>
-                    <div class="ml-1 mt-1">・<%= event.minimum_number %>人で予約してください。</div>
-                  <% end %>
-                  <div class="ml-1 mt-1">開催地：<%= Prefecture.names.invert[event.prefecture_id] %></div>
-                  <div class="ml-1 mt-1"><イベント概要><br>
-                    <% if event.outline.length > 40 %>
-                      <%= event.outline[0, 40] + "..." %>
-                    <% else %>
-                      <%= event.outline %>
-                    <% end %>
+                  <div class="col mt-2">
+                    <!--イベント情報-->
+                    <div class="ml-1 mt-1">
+                      <h4><%= link_to event.name, admin_event_path(event.id) %></h4>
+                    </div>
+                      <% event.event_categories.each do |event| %>
+                        <span class="badge badge-primary mr-2"><%= event.category.name %></span>
+                      <% end %>
+                    <div class="ml-1 mt-1">開催日時：<%= event.date.strftime("%Y/%m/%d") %> <%= event.time.strftime("%H:%M") %></div>
+                    <div class="ml-1 mt-1">募集人数：<%= event.number %>人</div>
+                      <% if event.fixed_number.present? %>
+                        <div class="ml-1 mt-1">・<%= event.fixed_number %>人で予約してください。</div>
+                      <% elsif event.minimum_number.present? %>
+                        <div class="ml-1 mt-1">・<%= event.minimum_number %>人以上で予約してください。</div>
+                      <% end %>
+                    <div class="ml-1 mt-1">開催地：<%= Prefecture.names.invert[event.prefecture_id] %></div>
+                    <div class="ml-1 mt-1"><イベント概要><br>
+                      <% if event.outline.length > 40 %>
+                        <%= event.outline[0, 40] + "..." %>
+                      <% else %>
+                        <%= event.outline %>
+                      <% end %>
+                    </div>
                   </div>
                 </div>
               </div>
             </div>
+          <% elsif event.date < Date.today %>
+            <div class="mt-4 mb-3 text-center"><h6>過去のイベント</h6></div>
+              <div class="row">
+                <div class="col-md-12 mt-2 border">
+                  <div class="row">
+                    <div class="col m-2">
+                    <!--画像-->
+                      <%= link_to admin_event_path(event.id) do %>
+                        <% if event.image.attached? %>
+                          <%= image_tag event.image, class: "img-fluid" %>
+                        <% else %>
+                          <%= image_tag 'no_image', class: "img-fluid" %>
+                        <% end %>
+                      <% end %>
+                    </div>
+                    <div class="col mt-2">
+                      <!--イベント情報-->
+                      <div class="ml-1 mt-1">
+                        <h4><%= link_to event.name, admin_event_path(event.id) %></h4>
+                      </div>
+                        <% event.event_categories.each do |event| %>
+                          <span class="badge badge-primary mr-2"><%= event.category.name %></span>
+                        <% end %>
+                      <div class="ml-1 mt-1">開催日時：<%= event.date.strftime("%Y/%m/%d") %> <%= event.time.strftime("%H:%M") %></div>
+                      <div class="ml-1 mt-1">募集人数：<%= event.number %>人</div>
+                        <% if event.fixed_number.present? %>
+                          <div class="ml-1 mt-1">・<%= event.fixed_number %>人で予約してください。</div>
+                        <% elsif event.minimum_number.present? %>
+                          <div class="ml-1 mt-1">・<%= event.minimum_number %>人以上で予約してください。</div>
+                        <% end %>
+                      <div class="ml-1 mt-1">開催地：<%= Prefecture.names.invert[event.prefecture_id] %></div>
+                      <div class="ml-1 mt-1"><イベント概要><br>
+                        <% if event.outline.length > 40 %>
+                          <%= event.outline[0, 40] + "..." %>
+                        <% else %>
+                          <%= event.outline %>
+                        <% end %>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
           <% end %>
-        </div>
+        <% end %>
       </div>
     </div>
 
   </div>
+
 </div>
