User & Event バリデーション設定

--- a/app/views/public/users/edit.html.erb
+++ b/app/views/public/users/edit.html.erb
@@ -77,7 +77,7 @@
 
      <div class="row mt-2">
       <div class="col">
-       電話番号（ハイフンなし）
+       電話番号（ハイフンなし）※半角
       </div>
       <div class="col">
        <%= f.text_field :phone_number %>
@@ -88,7 +88,7 @@
 
      <div class="row mt-2">
       <div class="col">
-       郵便番号（ハイフンなし）
+       郵便番号（ハイフンなし）※半角
       </div>
       <div class="col">
        <%= f.text_field :postal_code %>
