--- a/app/views/public/registrations/new.html.erb
+++ b/app/views/public/registrations/new.html.erb
@@ -52,14 +52,14 @@
           </div>
 
           <div class="form-group row">
-            <label for="phone_number" class="col-sm-3 col-form-label">電話番号</label>
+            <label for="phone_number" class="col-sm-3 col-form-label">電話番号※半角</label>
             <div class="col-sm-9">
               <%= f.text_field :phone_number, placeholder: "必須" %>
             </div>
           </div>
 
           <div class="form-group row">
-            <label for="postal_code" class="col-sm-3 col-form-label">郵便番号<br>（ハイフンなし）</label>
+            <label for="postal_code" class="col-sm-3 col-form-label">郵便番号<br>（ハイフンなし）※半角</label>
             <div class="col-sm-9">
               <%= f.text_field :postal_code, placeholder: "必須" %>
             </div>
