--- a/app/views/public/events/show.html.erb
+++ b/app/views/public/events/show.html.erb
@@ -80,7 +80,7 @@
         <!--ログインしているか-->
         <% if user_signed_in? %>
           <% if @reservation.present? %>
-              <%= link_to "詳細", event_reservation_path(current_user.id, @event.id), class: "btn btn-success" %>
+              <%= link_to "詳細", event_reservation_path(@event.id, current_user.id), class: "btn btn-success" %>
           <% else %>
             <% if @event.user_id == current_user.id %>
               <%= link_to "編集", edit_event_path(@event.id), class: "btn btn-success" %>
