--- a/app/views/public/reservations/show.html.erb
+++ b/app/views/public/reservations/show.html.erb
@@ -85,7 +85,7 @@
       <% if @event.date >= Date.today %>
         <div class="d-flex justify-content-between">
           <%= link_to '登録内容を変更する', edit_event_reservation_path(@event, @reservation), class: "btn btn-success" %>
-          <%= link_to '取り消す', event_reservation_path(@event, @reservation), method: :delete, class: "btn btn-danger" %>
+          <%= link_to '取り消す', event_reservation_path(@event, @reservation), method: :delete, class: "btn btn-danger", data: {confirm: "予約を取り消しますか？"} %>
         </div>
       <% else %>
         <div class="text-center">ご参加ありがとうございました。</div>
