--- a/app/views/public/users/show.html.erb
+++ b/app/views/public/users/show.html.erb
@@ -3,15 +3,13 @@
     <div class="col-md-8">
       <div class="card">
         <div class="card-header text-center" style="background-color: #32EEFF; color: white;">
-          <h4>マイページ</h4>
+          <h4 class="m-0">マイページ</h4>
         </div>
-
         <% if @notifications.present? %>
-        <!--通知-->
-
-              <%= link_to "招待が届いています", user_notification_path,class: "btn btn-warning btn-sm", remote: true %>
-            <div id="mask" class="hidden"></div>
-            <div id="modal" class="hidden overlay modal-content"></div>
+          <!--通知-->
+          <%= link_to "招待が届いています", user_notification_path,class: "btn btn-warning btn-sm", remote: true %>
+          <div id="mask" class="hidden"></div>
+          <div id="modal" class="hidden overlay modal-content"></div>
         <% end %>
 
         <div class="card-body">
