--- a/app/views/public/homes/home.html.erb
+++ b/app/views/public/homes/home.html.erb
@@ -1,7 +1,7 @@
 <div class="container mt-5">
     <div class="row justify-content-center">
         <div class="col-md-6 text-center">
-            <h1>SportsMeet</h1>
+            <h1 class="m-0">SportsMeet</h1>
             <p>スポーツをしたい人にイベント参加のきっかけを作る<br>「イベント」と「人」の『逆オファー型イベント予約サイト』です。</p>
         </div>
     </div>
