--- a/app/views/public/reservations/show.html.erb
+++ b/app/views/public/reservations/show.html.erb
@@ -1,6 +1,6 @@
 <div class="container mt-5">
   <div class="text-center">
-    <h4>予約詳細</h4>
+    <h4 class="m-0">予約詳細</h4>
   </div>
 
   <div class="row justify-content-center mt-4">
