--- a/app/views/public/users/_notification.html.erb
+++ b/app/views/public/users/_notification.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
-  <div class="mt-5 ml-3 text-center"><h4>イベントに参加してみませんか？</h4></div>
+  <div class="mt-5 ml-3 text-center"><h4 class="m-0">イベントに参加してみませんか？</h4></div>
 
     <div class="mt-4">
     <!--招待通知表示-->
