--- a/app/views/public/users/edit.html.erb
+++ b/app/views/public/users/edit.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
- <div class="mt-4 mb-3 text-center"><h4>ユーザー編集</h4></div>
+ <div class="mt-4 mb-3 text-center"><h4 class="m-0">ユーザー編集</h4></div>
   <%= form_with model: @user, url: user_information_path, method: :patch do |f| %>
     <div class="mt-4">
 
