--- a/app/views/public/users/unsubscribe.html.erb
+++ b/app/views/public/users/unsubscribe.html.erb
@@ -1,7 +1,7 @@
 <div class="container mt-5">
     <div class="row justify-content-center">
         <div class="col-md-6 text-center">
-            <h1>退会のお手続き</h1>
+            <h1 class="m-0">退会のお手続き</h1>
             <p>退会手続きをされますと、サービスがご利用が制限されてしまいます。<br>再度ご利用をいただく場合には、新規登録のお手続きが必要になります。<br>本当に退会してよろしいですか？</p>
         </div>
     </div>
