--- a/app/views/public/events/new.html.erb
+++ b/app/views/public/events/new.html.erb
@@ -3,7 +3,7 @@
     <div class="col-md-8">
       <div class="card">
         <div class="card-header text-center">
-          <h4>新規イベント登録</h4>
+          <h4 class="m-0">新規イベント登録</h4>
 
         </div>
         <div class="card-body">
