--- a/app/views/public/registrations/new.html.erb
+++ b/app/views/public/registrations/new.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row justify-content-center mt-4">
     <div class="col-sm-8">
-      <div class="text-center py-2">新規ユーザー登録</div>
+      <div class="text-center py-2"><h4 class="m-0">新規ユーザー登録</h4></div>
       <%= form_with model: @user, url: user_registration_path, method: :post do |f| %>
         <%= render "public/shared/error_messages", resource: @user %>
         <div class="mt-4">
