--- a/app/views/public/reservations/edit.html.erb
+++ b/app/views/public/reservations/edit.html.erb
@@ -1,6 +1,6 @@
 <div class="container mt-5">
   <div class="text-center">
-    <h4>予約編集</h4>
+    <h4 class="m-0">予約編集</h4>
   </div>
 
   <% if flash[:alert] %>
