Event 日付条件分岐　途中

--- a/app/views/public/events/new.html.erb
+++ b/app/views/public/events/new.html.erb
@@ -100,6 +100,14 @@
               </div>
             </div>
 
+            <div class="text-center">
+              <h6 class="m-4">※投稿したイベント内容は一般の方々が閲覧する可能性があります。
+                          <br>公序良俗に反しないよう、適切にご利用いただきたくお願い申し上げます。
+                          <br>イベントの中止をご検討される場合は、
+                          <br>管理者にご連絡いただきますようお願い申し上げます。
+              </h6>
+            </div>
+
             <div class="form-group text-center">
               <%= f.submit "新規登録", class: "btn btn-success btn-block" %>
             </div>
