--- a/app/views/public/homes/about.html.erb
+++ b/app/views/public/homes/about.html.erb
@@ -11,6 +11,9 @@
       <br>ご自分の興味を設定していただくと新規のイベントから招待が届きます。
       <br>マイページからお気に入りに登録していただいたイベントのみ閲覧することができます。
       <br>たくさんのご応募お待ちしております。</h5>
+      <div class="mt-2">
+        <h6>投稿したイベントの中止をご検討される場合は、管理者にご連絡いただきますようお願い申し上げます。</h6>
+      </div>
       <div class="mt-3 text-danger"><h6>※このサイトのイベントは全て架空のものです。<br>実際にイベントは存在しませんので、ご注意ください。</h6></div>
     </div>
   </div>
