--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
 
   <main>
     <header>
-      <nav class="navbar navbar-expand-lg navbar-dark bg-primary bg-gradient">
+      <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #0000FF">
         <div class="container">
           <% if user_signed_in? %>
             <%= link_to public_about_path, class: "navbar-brand" do %>
@@ -41,51 +41,51 @@
               <% if user_signed_in? %>
                 <!-- ユーザーがログインしている場合 -->
                 <li class="nav-item">
-                  <%= link_to new_event_path, class: "nav-link" do %>
+                  <%= link_to new_event_path, class: "nav-link text-white" do %>
                     イベントを開催する
                   <% end %>
                 </li>
                 <li class="nav-item">
-                  <%= link_to events_path, class: "nav-link" do %>
+                  <%= link_to events_path, class: "nav-link text-white" do %>
                     イベント一覧
                   <% end %>
                 </li>
                 <li class="nav-item">
-                  <%= link_to user_mypage_path, class: "nav-link" do %>
+                  <%= link_to user_mypage_path, class: "nav-link text-white" do %>
                     マイページ
                   <% end %>
                 </li>
                 <li class="nav-item">
-                  <%= link_to destroy_user_session_path, method: :delete, class: "nav-link" do %>
+                  <%= link_to destroy_user_session_path, method: :delete, class: "nav-link text-white" do %>
                     ログアウト
                   <% end %>
                 </li>
               <% elsif admin_signed_in? %>
                 <!-- 管理者がログインしている場合 -->
                 <li class="nav-item">
-                  <%= link_to admin_events_path, class: "nav-link" do %>
+                  <%= link_to admin_events_path, class: "nav-link text-white" do %>
                     イベント一覧
                   <% end %>
                 </li>
                 <li class="nav-item">
-                  <%= link_to admin_categories_path, class: "nav-link" do %>
+                  <%= link_to admin_categories_path, class: "nav-link text-white" do %>
                     カテゴリー一覧
                   <% end %>
                 </li>
                 <li class="nav-item">
-                  <%= link_to new_admin_category_path, class: "nav-link" do %>
+                  <%= link_to new_admin_category_path, class: "nav-link text-white" do %>
                     カテゴリー追加
                   <% end %>
                 </li>
                 <li class="nav-item">
-                  <%= link_to destroy_admin_session_path, method: :delete, class: "nav-link" do %>
+                  <%= link_to destroy_admin_session_path, method: :delete, class: "nav-link text-white" do %>
                     ログアウト
                   <% end %>
                 </li>
               <% else %>
                 <!-- ログインしていない場合 -->
                 <li class="nav-item">
-                  <%= link_to events_path, class: "nav-link" do %>
+                  <%= link_to events_path, class: "nav-link text-white" do %>
                     イベント一覧
                   <% end %>
                 </li>
@@ -105,7 +105,7 @@
   </main>
 
     <footer>
-      <div class="mt-5 p-3 bg-primary bg-gradient">
+      <div class="mt-5 p-3" style="background-color: #0000FF">
         <div class="border-dark border-dark">
            <!--フッターコンテンツを追加 -->
           <div class="container text-center text-white">
