--- a/app/views/public/users/show.html.erb
+++ b/app/views/public/users/show.html.erb
@@ -2,7 +2,7 @@
   <div class="row justify-content-center">
     <div class="col-md-8">
       <div class="card">
-        <div class="card-header text-center" style="background-color: #00FFFF; color: white;">
+        <div class="card-header text-center" style="background-color: #8EB8FF; color: white;">
           <h4 class="m-0">マイページ</h4>
         </div>
         <% if @notifications.present? %>
